# cfar-radar-pipeline

./: .gitignore  Makefile  README.md
backend/: CMakeLists.txt
backend/benchmarks/: CMakeLists.txt  bench_cfar.cpp
backend/include/cfar/: BenchmarkTimer.hpp  CFARDetector.hpp  DataLoader.hpp  DopplerProcessor.hpp  FFTProcessor.hpp  RangeProfile.hpp
backend/src/: CFARDetector.cpp  DataLoader.cpp  DopplerProcessor.cpp  FFTProcessor.cpp  main.cpp
backend/tests/: CMakeLists.txt  test_cfar.cpp  test_fft.cpp
frontend/: index.html
frontend/public/data/: manifest.json
frontend/public/data/scenes/: highway.json  parking.json  swarm.json  urban.json
frontend/scripts/build-dataset/: build.py
frontend/src/: bundle.jsx  index.css
server/: main.py  pipeline.py  requirements.txt  scene_loader.py
